--- a/global.css
+++ b/global.css
@@ -13,55 +13,48 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
 }
 .card {
     background-color: hsl(0, 0%, 100%);
-    border-radius: 20px;
-    margin: 50px;
-    width: 50%;
+    border-radius: 1.5rem;
+    width: 22rem;
 }
 .card-image {
-    padding: 5%;
+    padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .card-text {
     text-align: center;
-    font-size: 15px;
+    font-size: 1.1rem;
     font-weight: 400;
     font-family: 'Outfit', sans-serif;
     color: hsl(220, 15%, 55%);
-    padding: 15px;
-    padding-top: 0px;
+    padding: 1rem;
+    padding-top: 0;
 }
 img {
-    border-radius: 20px;
+    border-radius: 1.5rem;
     max-width: 100%;
 }
 .bold {
     font-weight: 700;
     color: hsl(218, 44%, 22%);
 }
+
 @media screen and (max-width: 375px) {
     .card {
-        width: 95%;
+        width: 18rem;
     }
     .card-text {
-        font-size: 8px;
+        font-size: 0.9rem;
     }
 }
 @media screen and (min-width: 376px) and (max-width: 475px) {
     .card {
-        width: 95%;
-    }
-    .card-text {
-        font-size: 10px;
-    }
-}
-@media screen and (min-width: 1440px) {
-    .card-text {
-        font-size: 20px;
+        width: 21rem;
     }
 }
 
